--- a/src/app/views/lista-livros/lista-livros.component.html
+++ b/src/app/views/lista-livros/lista-livros.component.html
@@ -10,11 +10,15 @@
     </button>
   </div>
   <p>Busque por assunto, autoria, nome...</p>
-<div class="container-card" *ngIf="livrosEncontrados$ | async as listaLivros, else telaInicial">
-  <div *ngFor="let livro of listaLivros">
-    <app-livro [livro]="livro"></app-livro>
+  <div class="resultados mensagem-erro" *ngIf="mensagemErro">
+    {{ mensagemErro }}
   </div>
-</div>
+  <div class="container-card" *ngIf="livrosEncontrados$ | async as listaLivros, else telaInicial">
+    <div *ngFor="let livro of listaLivros">
+      <app-livro [livro]="livro"></app-livro>
+    </div>
+  </div>
+</section>
 <ng-template #telaInicial>
   <div class="imagens">
     <h1 class="titulo">Busque o livro <br> que quiser na <br> nossa estante!</h1>
