--- a/src/app/views/lista-livros/lista-livros.component.html
+++ b/src/app/views/lista-livros/lista-livros.component.html
@@ -13,10 +13,10 @@
   <div class="resultados mensagem-erro" *ngIf="mensagemErro">
     {{ mensagemErro }}
   </div>
-  <div class="resultados" *ngIf="totalDeLivros$ | async">
+  <div class="resultados" *ngIf="livrosEncontrados$ | async">
     {{ livrosResultado.totalItems }} resultados encontrados
   </div>
-  <div class="container-card" *ngIf="livrosEncontrados$ | async as listaLivros, else telaInicial">
+  <div class="container-card" *ngIf="listaLivros, else telaInicial">
     <div *ngFor="let livro of listaLivros">
       <app-livro [livro]="livro"></app-livro>
     </div>
